# appsnap

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/appsnap/: __init__.py  __main__.py  capture.py  windows.py
